# zettelkasten-mcp

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  setup.py
docs/project-knowledge/dev/: Example - A simple MCP server that exposes a website fetching tool.md  MCP Python SDK-README.md  llms-full.txt
docs/project-knowledge/user/: batch-operations.md  export-functionality.md  link-types-in-zettelkasten-mcp-server.md  zettelkasten-methodology-technical.md
docs/prompts/chat/: chat-prompt-knowledge-creation-batch.md  chat-prompt-knowledge-creation.md  chat-prompt-knowledge-exploration.md  chat-prompt-knowledge-synthesis.md
docs/prompts/system/: system-prompt-with-protocol.md  system-prompt.md
src/zettelkasten_mcp/: __init__.py  config.py  main.py  utils.py
src/zettelkasten_mcp/models/: db_models.py  schema.py
src/zettelkasten_mcp/server/: mcp_server.py
src/zettelkasten_mcp/services/: export_service.py  search_service.py  zettel_service.py
src/zettelkasten_mcp/storage/: base.py  note_repository.py
tests/: conftest.py  test_batch_operations.py  test_export_service.py  test_integration.py  test_link_types.py  test_mcp_server.py  test_models.py  test_zettel_service.py
